--- a/helper.css
+++ b/helper.css
@@ -7,6 +7,8 @@
     background: none;
     border: 2px solid var(--color-text);
 
+    text-shadow: inherit;
+
     width: max-content;
     height: max-content;
 
