--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ section {
     box-sizing: border-box;
 
     line-height: 1.5;
-    padding: 1rem;
+    padding-top: 1rem;
 
     display: flex;
     flex-direction: column;
@@ -198,7 +198,8 @@ section {
 }
 
 .project-links a {
-    margin: 0 1rem 0 1rem;
+    margin: 0 1rem .5rem 1rem;
+    color: var(--color-text-hl);
 }
 
 .contact {
