--- a/css/styles.css
+++ b/css/styles.css
@@ -1,214 +1,97 @@
+@import './helper.css';
 
-:root {
-    --main-font: 'Contrail One', cursive;
-    --intro-bg: radial-gradient(ellipse at top left, var(--color-bg-main), var(--color-primary-comp));
-
-    --color-bg-main: #263739;
-    --color-text: #e3f1f3;
-    --color-text-hl: #b86354;
-    --color-primary: #263739;
-    --color-secondary: #2c4c64;
-    --color-primary-comp: #97a9ac;
-    --color-secondary-comp: #6c8ca4;
-}
-
-html {
-    font-family: var(--main-font);
-    color: var(--color-text);
-    text-shadow: 1px 1px 2px black;
-}
-
-body, section, h1, h2, h3, h4, p {
-    margin: 0;
-}
-
-body {
-    background: var(--intro-bg);
-    box-sizing: border-box;
-}
-
-a {
-    text-decoration: none;
-}
-
-a:active {
-    color: var(--color-text);
-}
-
-h1 {
-    font-size: 3rem;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-h3 {
-    font-size: 1.75rem;
-}
-
-section {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.intro {
-    height: 100vh;
-
-    margin: 0 3rem 0 3rem;
-
-    text-align: center;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.intro-cta {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.scroll-cta {
-    display: flex;
-    align-items: center;
-
-    color: var(--color-text);
-
-    font-size: 1.25em;
+#bg-canvas {
+    z-index: -1;
     position: absolute;
-    bottom: 1vh;
-    left: 1vw;
-
-    writing-mode: vertical-lr;
-}
-
-.scroll-cta-arw {
-    margin: 1em;
-    width: 1px;
-    height: 15vh;
-
-    background-color: var(--color-text);
-}
-
-.title {
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-    border-bottom: 2px solid var(--color-text);
-
-    width: 4em;
-    height: max-content;
-}
-
-.subtitle {
-    padding: 0 1rem 0 1rem;
-    margin-bottom: 1.5rem;
-
-    color: var(--color-text-hl);
-
-    border-left: 2px solid var(--color-text-hl);
-    border-right: 2px solid var(--color-text-hl);
-}
-
-.about, .projects, .contact {
+    left: 0;
+    top: 0;
     box-sizing: border-box;
-    margin: 3rem;
-    padding: 2rem;
-}
-
-.bio, .skills {
-    box-sizing: border-box;
-
-    line-height: 1.5;
-    padding-top: 1rem;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-@media screen and (min-width: 900px) {
-    .bio, .skills {
-        width: 50%;
-        font-size: 1.25rem;
-    }
-}
-
-.skill {
-    margin: .5rem;
-    display: grid;
-    grid-template-rows: repeat(2, .75fr);
-    justify-content: center;
-    align-items: center;
-}
-
-.projects-wrapper {
+    background-color: var(--c-bg-prim);
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    height: 100%;
 }
 
-@media screen and (min-width: 300px) {
-    .project {
-        width: 15rem;
-    }
+.navbar {
+    position: fixed;
+    right: 0;
+    top: 25px;
+    margin-right: 50px;
+    opacity: 0;
+    animation: FadeIn 1.25s ease-in-out forwards;
+    animation-delay: 1s;
 }
 
-.project {
+.nav-items {
+    grid-template-columns: repeat(3, 1fr);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: var(--c-bg-ter);
+    font-family: LeonSans-Regular;
+    font-size: .75em;
+}
+
+.nav-items li {
     justify-self: center;
-    align-self: center;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    background-color: #2c4c6470;
-    border-radius: 5px;
-
-    padding: 1rem;
-    margin: 1rem;
+    margin: 0 .5em;
 }
 
-.project-title {
-    color: var(--color-text-hl);
-    padding: 0 1rem 0 1rem;
-
-    border-left: 1px solid var(--color-text-hl);
-    border-right: 1px solid var(--color-text-hl);
+.nav-item {
+    letter-spacing: .1em;
 }
 
-.project-image {
-    width: 50%;
-    margin: 1rem 0 1rem 0;
-}
-
-.project-links {
-    width: 100%;
-    margin-top: 1rem;
-
-    display: flex;
+.hero {
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    color: var(--c-bg-ter);
+    height: 100vh;
 }
 
-.project-links a {
-    margin: 0 1rem .5rem 1rem;
-    color: var(--color-text-hl);
+#hero-name {
+    opacity: 0;
+    position: relative;
+    font-family: Ikaros;
+    letter-spacing: .1em;
+    font-size: 3em;
+    animation: FadeFromBottom 1.25s ease-in-out forwards;
+    animation-delay: .25s;
 }
 
-.contact {
-    flex-wrap: wrap;
+#hero-title {
+    opacity: 0;
+    font-family: LeonSans-Thin;
+    font-size: .75em;
+    animation: FadeInMuted 1.25s ease-in-out forwards;
+    animation-delay: 1s;
 }
 
-.contact-logo {
-    width: 3rem;
-    height: 3rem;
+@keyframes FadeFromBottom {
+    0% {
+        opacity: 0%;
+        top: 10%;
+    }
+    75% {
+        top: 0;
+    }
+    100% {
+        opacity: initial;
+    }
+}
 
-    margin: 1rem;
+@keyframes FadeIn {
+    0% {
+        opacity: 0%;
+    }
+    100% {
+        opacity: 100%;
+    }
+}
+
+@keyframes FadeInMuted {
+    0% {
+        opacity: 0%;
+    }
+    100% {
+        opacity: 50%;
+    }
 }
