--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 #bg-canvas {
     z-index: -1;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     box-sizing: border-box;
@@ -48,50 +48,32 @@
 }
 
 #hero-name {
-    opacity: 0;
     position: relative;
     font-family: Ikaros;
     letter-spacing: .1em;
     font-size: 3em;
-    animation: FadeFromBottom 1.25s ease-in-out forwards;
-    animation-delay: .25s;
 }
 
 #hero-title {
-    opacity: 0;
     font-family: LeonSans-Thin;
     font-size: .75em;
-    animation: FadeInMuted 1.25s ease-in-out forwards;
-    animation-delay: 1s;
 }
 
-@keyframes FadeFromBottom {
-    0% {
-        opacity: 0%;
-        top: 10%;
-    }
-    75% {
-        top: 0;
-    }
-    100% {
-        opacity: initial;
-    }
+.about {
+    grid-template-columns: repeat(3, 1fr);
+    margin: 5em 0 15em 0; 
+    backdrop-filter: blur(3px);
 }
 
-@keyframes FadeIn {
-    0% {
-        opacity: 0%;
-    }
-    100% {
-        opacity: 100%;
-    }
+.about-me .text {
+    padding: 0 4em;
+    backdrop-filter: blur(5px);
 }
 
-@keyframes FadeInMuted {
-    0% {
-        opacity: 0%;
-    }
-    100% {
-        opacity: 50%;
-    }
+.skills {
+    justify-content: center;
+}
+
+.skill {
+    margin: 0 1em;
 }
