--- a/css/helper.css
+++ b/css/helper.css
@@ -57,6 +57,22 @@ button {
     cursor: pointer;
 }
 
+input, textarea {
+    background: none;
+    border: none;
+    font-family: LeonSans-Regular;
+    letter-spacing: 3px;
+    padding: 0;
+}
+
+textarea {
+    resize: none;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+}
+
 .flex {
     display: flex;
 }
@@ -90,6 +106,21 @@ button {
     border-radius: 5px;
 }
 
+.b-shadow {
+    position: relative;
+}
+
+.b-shadow::after {
+    position: absolute;
+    bottom: 6px;
+    left: 6px;
+    content: '';
+    border-radius: 5px;
+    box-shadow: 2px -2px 0 var(--c-bg-ter);
+    width: 100%;
+    height: 100%;
+}
+
 .highlight {
     color: var(--c-acc-blue);
 }
@@ -104,4 +135,21 @@ button {
     font-family: LeonSans-Regular;
     line-height: 2;
     font-size: .75em;
+}
+
+.text-desc {
+    font-family: LeonSans-Light;
+    font-size: .75em;
+    letter-spacing: 2px;
+}
+
+.subtext {
+    font-family: LeonSans-thin;
+    font-size: .5em;
+    letter-spacing: 2px;
+    line-height: 2;
+}
+
+.muted {
+    opacity: 50%;
 }
