--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
 
 .about {
     grid-template-columns: repeat(3, 1fr);
-    margin: 5em 0 15em 0; 
+    padding: 5em 0 15em 0; 
     backdrop-filter: blur(3px);
 }
 
@@ -71,9 +71,154 @@
 }
 
 .skills {
-    justify-content: center;
+    margin-top: 2em;
+    padding: 0 5em;
+    justify-content: space-evenly;
 }
 
 .skill {
     margin: 0 1em;
+}
+
+.skill-img {
+    border-radius: 5px;
+    height: 2em;
+}
+
+.projects {
+    padding: 5em 0;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.project-card {
+    background-color: var(--c-bg-prim);
+    box-sizing: border-box;
+    max-width: 500px;
+    justify-self: center;
+    padding: 1em;
+}
+
+.project-title {
+    margin-bottom: 1em;
+    font-family: Ikaros;
+    font-weight: 100;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.project-img {
+    filter:contrast(75%);
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.project-links {
+    margin-top: 1em;
+    justify-content: space-evenly;
+}
+
+.project-link {
+    font-family: LeonSans-Thin;
+    font-size: .75em;
+    padding: .25em .5em;
+    background-color: var(--c-bg-prim);
+}
+
+.contact {
+    padding: 5em 0;
+    justify-content: center;
+}
+
+.contact-form-wrapper {
+    padding: .5em 1em 1em;
+    max-width: 750px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto;
+    background-color: var(--c-bg-prim);
+    backdrop-filter: blur(5px);
+}
+
+.contact-form-wrapper .section-title {
+    grid-column: 1 / span 2;
+    text-align: left;
+    letter-spacing: normal;
+}
+
+.contact-info {
+    padding-right: 2em;
+    box-sizing: border-box;
+}
+
+.contact-info .subtext {
+    box-sizing: border-box;
+    font-family: LeonSans-Regular;
+    line-height:normal;
+    letter-spacing: normal;
+}
+
+.contact-info .subtext:nth-of-type(3) {
+    padding: 0 3em;
+}
+
+.social-links {
+    justify-content: space-evenly;
+    padding: 1em 0;
+    margin: 0 1em;
+    border-top: 2px solid var(--c-bg-sec);
+    border-bottom: 2px solid var(--c-bg-sec);
+}
+
+.social-link {
+    height: 50px;
+}
+
+.contact-form {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto auto auto;
+}
+
+#name, #email, #subject, #message {
+    border-bottom: 2px solid var(--c-bg-sec);
+    color: var(--c-bg-ter);
+    padding: .5em;
+}
+
+#name:focus, #email:focus, #subject:focus, #message:focus {
+    background-color: var(--c-bg-sec);
+    border-radius: 5px;
+}
+
+#name {
+    grid-row: 1;
+    grid-column: 1;
+    margin-right: 1em; 
+}
+
+#email {
+    grid-row: 1;
+    grid-column: 2;
+    margin-left: 1em;
+}
+
+#subject {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    margin: 1em 0;
+}
+
+#message {
+    grid-row: 3;
+    grid-column: 1 / span 2;
+    margin-bottom: 1em;
+}
+
+.form-submit {
+    grid-row: 4;
+    grid-column: 2;
+    margin: 1em 0;
+    max-width: 150px;
+    padding: .25em 1em;
+    font-family: LeonSans-Regular;
+    font-size: .5em;
+    justify-self: end;
 }
