--- a/css/styles.css
+++ b/css/styles.css
@@ -60,14 +60,12 @@
 }
 
 .about {
-    grid-template-columns: repeat(3, 1fr);
-    padding: 5em 0 15em 0; 
+    padding: 5em 0; 
     backdrop-filter: blur(3px);
 }
 
-.about-me .text {
-    padding: 0 4em;
-    backdrop-filter: blur(5px);
+.specialty, .about-me, .exposure {
+    margin: 2em 0;
 }
 
 .skills {
@@ -77,7 +75,7 @@
 }
 
 .skill {
-    margin: 0 1em;
+    margin: .5em 1em;
 }
 
 .skill-img {
@@ -86,8 +84,7 @@
 }
 
 .projects {
-    padding: 5em 0;
-    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 5em;
 }
 
 .project-card {
@@ -96,6 +93,7 @@
     max-width: 500px;
     justify-self: center;
     padding: 1em;
+    margin: 2em 0;
 }
 
 .project-title {
@@ -142,6 +140,7 @@
     grid-column: 1 / span 2;
     text-align: left;
     letter-spacing: normal;
+    margin-bottom: .5em;
 }
 
 .contact-info {
@@ -173,11 +172,11 @@
 }
 
 .contact-form {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto auto auto;
+    box-sizing: border-box;
 }
 
 #name, #email, #subject, #message {
+    box-sizing: border-box;
     border-bottom: 2px solid var(--c-bg-sec);
     color: var(--c-bg-ter);
     padding: .5em;
@@ -188,37 +187,192 @@
     border-radius: 5px;
 }
 
-#name {
-    grid-row: 1;
-    grid-column: 1;
-    margin-right: 1em; 
-}
-
-#email {
-    grid-row: 1;
-    grid-column: 2;
-    margin-left: 1em;
-}
-
-#subject {
-    grid-row: 2;
-    grid-column: 1 / span 2;
-    margin: 1em 0;
-}
-
-#message {
-    grid-row: 3;
-    grid-column: 1 / span 2;
-    margin-bottom: 1em;
-}
-
 .form-submit {
-    grid-row: 4;
-    grid-column: 2;
     margin: 1em 0;
     max-width: 150px;
     padding: .25em 1em;
     font-family: LeonSans-Regular;
     font-size: .5em;
     justify-self: end;
+}
+
+@media screen and (max-width: 768px) {
+
+    html {
+        font-size: 24px;
+    }
+
+    .about {
+        box-sizing: border-box;
+    }
+
+    .about-me, .specialty, .exposure {
+        box-sizing: border-box;
+        margin: 1em .5em;
+    }
+    .skills {
+        padding: 0;
+    }
+
+    .project-card {
+        margin: 2em .5em;
+    }
+
+    .project-link {
+        margin: 1em 1em;
+    }
+
+    .contact {
+        box-sizing: border-box;
+    }
+
+    .contact-form-wrapper {
+        margin: 0 .5em;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .projects, .about {
+        grid-template-columns: none;
+        grid-template-rows: auto auto auto;
+    }
+
+    .about-me {
+        grid-row: 1;
+    }
+
+    .specialty {
+        grid-row: 2;
+    }
+
+    .contact-form-wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+    }
+
+    .contact-form-wrapper .section-title {
+        grid-row: 1;
+        text-align: center;
+    }
+
+    .contact-info {
+        grid-row: 3;
+        padding: 0;
+        margin-top: 1em;
+    }
+
+    .contact-form {
+        margin-top: 1em;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto auto;
+    }
+
+    #name {
+        grid-row: 1;
+        margin-right: 0;
+        width: 100%;
+    }
+
+    #email {
+        grid-row: 2;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    #subject {
+        grid-row: 3;
+        margin: 1em 0;
+    }
+
+    #message {
+        grid-row: 4;
+        margin-bottom: 1em;
+    }
+
+    .form-submit {
+        grid-row: 5;
+        justify-self: center;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    html {
+        font-size: 20px;
+    }
+    
+    .projects,
+    .about {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .project-card {
+        max-width: 300px;
+    }
+
+    .about-me {
+        grid-column: 2;
+    }
+
+    .about-me .text {
+        padding: 0 2em;
+    }
+
+    .specialty {
+        grid-column: 1;
+    }
+
+    .contact-info {
+        margin: auto 1em;
+        font-size: 24px;
+    }
+
+    #name {
+        grid-row: 1;
+        grid-column: 1;
+        margin-right: 1em;
+    }
+
+    #email {
+        grid-row: 1;
+        grid-column: 2;
+        margin-left: 1em;
+    }
+
+    #subject {
+        grid-row: 2;
+        grid-column: 1 / span 2;
+        margin: 1em 0;
+    }
+
+    #message {
+        grid-row: 3;
+        grid-column: 1 / span 2;
+        margin-bottom: 1em;
+    }
+
+    .form-submit {
+        grid-column: 2;
+        margin-right: 2em;
+        justify-self: end;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    html {
+        font-size: 24px;
+    }
+
+    .project-card {
+        max-width: 400px;
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    html {
+        font-size: 32px;
+    }
+
+    .project-card {
+        max-width: 500px;
+    }
 }
