--- a/css/helper.css
+++ b/css/helper.css
@@ -46,6 +46,11 @@ body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: var(--c-bg-ter);
+}
+
 button {
     margin: 0;
     padding: 0;
@@ -63,6 +68,7 @@ input, textarea {
     font-family: LeonSans-Regular;
     letter-spacing: 3px;
     padding: 0;
+    border-bottom: 2px solid var(--c-bg-sec);
 }
 
 textarea {
@@ -71,6 +77,23 @@ textarea {
 
 input:focus, textarea:focus {
     outline: none;
+}
+
+input:valid, textarea:valid {
+    border-bottom: 2px solid var(--c-acc-blue);
+}
+
+input:invalid, textarea:invalid {
+    border-bottom: 2px solid var(--c-acc-red);
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:active,
+input:-webkit-autofill:focus {
+    box-shadow: 0 0 0px 20px var(--c-bg-prim) inset;
+    -webkit-box-shadow: 0 0 0px 20px var(--c-bg-prim) inset;
+    -webkit-text-fill-color: var(--c-bg-ter);
 }
 
 .flex {
