--- a/css/styles.css
+++ b/css/styles.css
@@ -11,29 +11,51 @@
     height: 100%;
 }
 
+/* Background Settings Menu Styling | WIP */
+
+#bg-settings-toggle {
+    position: absolute;
+    left: 1.5em;
+    top: .75em;
+    font-family: LeonSans-Light;
+    font-size: .65em;
+    opacity: 50%;
+}
+
+.bg-settings {
+    z-index: 10;
+    position: fixed;
+    top: 2em;
+    left: 1em;
+    width: 500px;
+    height: 750px;
+    background-color: white;
+}
+
+/* WIP End */
+
 .navbar {
+    display: none;
     position: fixed;
     right: 0;
     top: 25px;
     margin-right: 50px;
-    opacity: 0;
-    animation: FadeIn 1.25s ease-in-out forwards;
-    animation-delay: 1s;
 }
 
 .nav-items {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     list-style: none;
     margin: 0;
     padding: 0;
     color: var(--c-bg-ter);
     font-family: LeonSans-Regular;
-    font-size: .75em;
+    font-size: .65em;
+    opacity: 50%;
 }
 
 .nav-items li {
-    justify-self: center;
-    margin: 0 .5em;
+    justify-self: end;
+    margin: 1em .5em;
 }
 
 .nav-item {
@@ -52,11 +74,20 @@
     font-family: Ikaros;
     letter-spacing: .1em;
     font-size: 3em;
+    font-weight: 100;
 }
 
 #hero-title {
     font-family: LeonSans-Thin;
     font-size: .75em;
+}
+
+#cv-download {
+    font-family: LeonSans-Light;
+    text-align: center;
+    margin-top: 1em;
+    padding: .125em 1em;
+    background-color: var(--c-bg-prim);
 }
 
 .about {
@@ -84,7 +115,7 @@
 }
 
 .projects {
-    padding-bottom: 5em;
+    margin: 5em 0 0;
 }
 
 .project-card {
@@ -177,14 +208,12 @@
 
 #name, #email, #subject, #message {
     box-sizing: border-box;
-    border-bottom: 2px solid var(--c-bg-sec);
     color: var(--c-bg-ter);
     padding: .5em;
 }
 
 #name:focus, #email:focus, #subject:focus, #message:focus {
     background-color: var(--c-bg-sec);
-    border-radius: 5px;
 }
 
 .form-submit {
@@ -194,6 +223,7 @@
     font-family: LeonSans-Regular;
     font-size: .5em;
     justify-self: end;
+    color: var(--c-bg-ter);
 }
 
 @media screen and (max-width: 768px) {
@@ -218,6 +248,10 @@
         margin: 2em .5em;
     }
 
+    .project-title {
+        font-size: .95em;
+    }
+
     .project-link {
         margin: 1em 1em;
     }
@@ -232,7 +266,7 @@
 }
 
 @media screen and (max-width: 1023px) {
-    .projects, .about {
+    .projects-wrapper, .about {
         grid-template-columns: none;
         grid-template-rows: auto auto auto;
     }
@@ -300,7 +334,7 @@
         font-size: 20px;
     }
     
-    .projects,
+    .projects-wrapper,
     .about {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -364,6 +398,11 @@
 
     .project-card {
         max-width: 400px;
+    }
+
+    .contact-info {
+        font-size: inherit;
+        margin: auto .5em;
     }
 }
 
