--- a/css/helper.css
+++ b/css/helper.css
@@ -65,6 +65,17 @@ button {
     transition: all .25s ease-in-out;
 }
 
+fieldset {
+    border: 2px solid var(--c-acc-blue);
+    padding: 1em 1em 2em 1em;
+    width: 100%;
+}
+
+legend {
+    padding: 0 .5em .5em;
+    margin: 0 -25%;
+}
+
 input, textarea {
     background: none;
     border: none;
@@ -86,32 +97,6 @@ label {
     grid-template-columns: auto auto;
 }
 
-input[type="submit"] {
-    cursor: pointer;
-    transition: background-color .25s, color .25s;
-}
-
-input[type="submit"]:hover {
-    background-color: var(--c-acc-blue);
-    color: var(--c-bg-prim);
-}
-
-input[type="range"], input[type="range"]:valid {
-    appearance: none;
-    border: none;
-    background-color: var(--c-acc-red);
-    height: .1em;
-    margin: auto;
-    cursor: pointer;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    appearance: none;
-    width: 3px;
-    height: 15px;
-    background-color: var(--c-bg-ter);
-}
-
 input:focus, textarea:focus {
     outline: none;
 }
@@ -131,6 +116,75 @@ input:-webkit-autofill:focus {
     box-shadow: 0 0 0px 20px var(--c-bg-prim) inset;
     -webkit-box-shadow: 0 0 0px 20px var(--c-bg-prim) inset;
     -webkit-text-fill-color: var(--c-bg-ter);
+}
+
+input[type='color'], input[type='color']:active {
+    border: none;
+    background: none;
+    outline: none;
+    width: 3em;
+    height: 3em;
+    margin: 0 1em;
+}
+
+input[type="submit"] {
+    cursor: pointer;
+    transition: background-color .25s, color .25s;
+}
+
+input[type="submit"]:hover {
+    background-color: var(--c-acc-blue);
+    color: var(--c-bg-prim);
+}
+
+input[type="range"],
+input[type="range"]:valid {
+    width: 50%;
+    appearance: none;
+    border: none;
+    background-color: var(--c-acc-red);
+    height: .1em;
+    margin: auto;
+    cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    margin: 0;
+    appearance: none;
+    width: 3px;
+    height: 15px;
+    background-color: var(--c-bg-ter);
+}
+
+input[type="checkbox"],
+input[type="checkbox"]:valid {
+    appearance: none;
+    border: none;
+    border: 2px solid var(--c-acc-blue);
+    border-radius: 5px;
+    min-width: 2em;
+    min-height: 2em;
+    cursor: pointer;
+    place-content: center;
+    display: grid;
+}
+
+input[type="checkbox"]::before {
+    content: '';
+    background-color: var(--c-acc-red);
+    width: 1em;
+    height: 1em;
+    transform: scale(0);
+    transition: transform .25s ease-in-out;
+    transform-origin: center;
+
+    /* Check Mark */
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked::before {
+    background-color: var(--c-acc-blue);
+    transform: scale(1);
 }
 
 figure {
