--- a/css/helper.css
+++ b/css/helper.css
@@ -46,6 +46,10 @@ body, h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+body {
+    background-color: var(--c-bg-prim);
+}
+
 a {
     text-decoration: none;
     color: var(--c-bg-ter);
@@ -189,6 +193,22 @@ input[type="checkbox"]:checked::before {
 
 figure {
     margin: 0;
+}
+
+*::-webkit-scrollbar {
+    width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+    appearance: none;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: var(--c-bg-sec);
+    border-radius: 1em;
+}
+*::-webkit-scrollbar-corner {
+    appearance: none;
 }
 
 .hidden {
